rgw: s3website doesn't prefetch for web_dir() check

this function only needs to check for existence of the given path.
the sal::Object is destroyed before the function returns, so it's
wasteful to prefetch its data

Fixes: https://tracker.ceph.com/issues/62938

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 7ba05a29163e1a81fb449e3231200e0bf55c1200)

Conflicts:
	src/rgw/rgw_rest_s3.cc: set_prefetch_data() takes RGWObjectCtx